themes/fishy/style.css
html, body, div, h1, h2, h3, ul {
        margin : 0px;
        padding : 0px;
}


img {
        border : none;
}

body {
	background-image: url(tile.jpg);
	background-repeat: repeat-x;
	background-color: white;
        font-family : arial, sans, sans-serif, helvetica;
        color : #0932E5;
        font-size : 12px;
}

#container {
        margin-right : 70px;
        overflow : none;
}

#container #sidepanel {
	background-image: url(leftbackground.jpg);
	background-repeat: no-repeat;
	background-position: left top;
	position: absolute;
	z-index: 2;
	left: 0px;
	top: 0px;
	padding-left: 20px;
	padding-top: 260px;
        width : 260px;
}

#container #top-menu {
       position: absolute;
       left : 200px;
       top : 10px;
       color : white;
}

#top-menu {
       text-align : right;
       font-size : .9em;
}

.smaller {
       font-size : .9em;
}

#container #top-menu a {
       color : white;
}

div.menu-link {
       font-size : .9em;
       padding : 2px;
}

#container #main-content {
       margin-left : 300px;
       margin-top : 90px;
       margin-bottom : 100px;
}

div.box {
       background-color : #e4f3fa;
       margin-bottom : 10px;
}

th {
       background-color : #1D93D3;
       color : white;
}

div.box div.box-title, div.panel-title {
       background-color : #1D93D3;
       color : white;
       padding : 2px 5px;
       border-top : 2px white solid;
       border-left : 2px white solid;
       border-right : 2px white solid;
}

div.box div.box-title h1, div.box div.box-title h3, div.panel-title h1 {
       font-size : 1.1em;
}

div.box div.box-title h1 a, div.box div.box-title h3 a {
       text-decoration : none;
       color : white;
}


div.box div.box-content {
       padding : 5px 5px;
       border : 2px white solid;
}

div.menu-links {
       padding : 0px 5px 5px 5px;
}

div.menu div.box {
       border : 1px solid white;
}

#top-menu hr {
display : none;
}

#top-menu input {
       font-size : .8em;
}

#search-box {
       position : absolute;
       left : 0px;
       top : 10px;
       z-index : 3;
}

#user-login {
      float : right;
      margin-right : 20px;
}

div.breadcrumb {
      margin-right : 20px;
      margin-top : 20px;
      clear : both;
}

#main-content div.box-title h1 {
      font-size : 1.2em;
      margin : 0px;
      margin-top : 2px;
      padding : 0px;
}

div.webpage-summary p {
      margin : 0px;
}

#main-content h2 {
      font-size : 1.1em;
}

#main-content div.box-content {
      padding : 10px;
}


#blog-list-view div.box-title h3 {
      font-size : .9em;
}

#blog-list-view div.entry-image {
      float : right;
      display : inline;
      margin-left : 8px;
}

#blog-list-view div.box-content {
      overflow : hidden;
}

#blog-list-view div.read-more {
      clear : both;
      border-top : 1px solid white;
}

div.month-view-mini {
     font-size : .7em;
}

div.month-view-mini table {
      collapse : collapse;
}

div.month-view-mini table td {
      border : 1px solid #1D93D3;
      text-align : center;
}

div.month-view-mini table th {
      background-color : #74BCE4;
}

td.day-normal {
      background-color : #E4F3FA;
}

td.day-current {
      background-color : #1D93D3;   
}

td.day-empty {
      background-color : white;
}

div.controlpanel div.frame {
     background-color : #1D93D3;
}

ul.tabmenu {
     margin-bottom : 2px;
}

ul.tabmenu li {
     margin-right : 5px;
}

ul.tabmenu li.active {
     background-color : #1D93D3;
     color : white;
}

ul.tabmenu li.active a:link, ul.tabmenu li.active a:visited{
     color : white;
}

#miniadmin h2 {
     font-size : 1em;
}

ul.no-bullet li {
     list-style-type : none;
     margin-left : 5px;
}

div.menu-link {
     background-image: url(bullet.png);
     background-repeat : no-repeat;
     background-position : center left;
}

div.menu-link a {
     margin-left : 15px;
     color : #1D93D3;
     text-decoration : none;
}

div.menu-link a:hover {
     text-decoration : underline;
}

.error {
     color : red;
     font-weight : bold;
}

.align-center {
    text-align : center;
}

